force-app/main/default/objects/Desk_Booking__c/Desk_Booking__c.object-meta.xml
<CustomObject>
    <label>Desk Booking</label>
    <nameField>
        <displayFormat>DB-{00000}</displayFormat>
        <label>Desk Booking No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Desk Bookings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>