force-app/main/default/objects/Desk_Booking__c/fields/Desk__c.field-meta.xml
<CustomField>
    <fullName>Desk__c</fullName>
    <label>Desk</label>
    <referenceTo>Desk__c</referenceTo>
    <relationshipLabel>Desk Bookings</relationshipLabel>
    <relationshipName>Desk_Bookings</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>