force-app/main/default/objects/Desk_Booking__c/fields/Is_My_Booking__c.field-meta.xml
<CustomField>
    <fullName>Is_My_Booking__c</fullName>
    <formula>$User.Id =  User__c</formula>
    <label>Is My Booking?</label>
    <type>Checkbox</type>
</CustomField>