force-app/main/default/objects/Desk_Booking__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Desk_Bookings</relationshipName>
    <type>Lookup</type>
</CustomField>