force-app/main/default/objects/Desk_Booking__c/listViews/My_Bookings.listView-meta.xml
<ListView>
    <fullName>My_Bookings</fullName>
    <columns>NAME</columns>
    <columns>Desk__c</columns>
    <columns>Date_of_Booking__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Is_My_Booking__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>My Bookings</label>
</ListView>